--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -18,6 +18,16 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="diagram.cpp" />
+    <ClCompile Include="diagram_2.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main_2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="diagram.h" />
+    <ClInclude Include="diagram_2.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{954F08E0-3912-425C-B38E-0BC8FC370467}</ProjectGuid>
@@ -122,13 +132,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="diagram_2.cpp" />
-    <ClCompile Include="main_2.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="diagram_2.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
