--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -20,10 +20,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="diagram.cpp" />
+    <ClCompile Include="diagram_2.cpp" />
+    <ClCompile Include="diagram_3.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="main_2.cpp" />
+    <ClCompile Include="main_3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="diagram.h" />
+    <ClInclude Include="diagram_2.h" />
+    <ClInclude Include="diagram_3.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
