--- a/TimeDiagramTest/TimeDiagramTest.vcxproj
+++ b/TimeDiagramTest/TimeDiagramTest.vcxproj
@@ -42,7 +42,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="test2.cpp" />
+    <ClCompile Include="tesst_3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Project1\Project1.vcxproj">
